# SDLFileBrowser

./: .gitignore  CMakeLists.txt  README.md
examples/file_browser_example/: CMakeLists.txt  main.cpp
include/app/: FileBrowserApp.h
include/core/: FileBrowser.h  UIManager.h
src/app/: FileBrowserApp.cpp
src/core/: FileBrowser.cpp  UIManager.cpp
src/lib/: CMakeLists.txt
